Content updates for Rule 6 groups + Rule 6 hub updates (removing tabs)

--- a/app/views/_includes/appellant/table-r6-statement.html
+++ b/app/views/_includes/appellant/table-r6-statement.html
@@ -16,7 +16,7 @@
   rows: [
     {
       key: {
-        html: 'Statement text',
+        html: 'Statement',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -52,7 +52,7 @@
   rows: [
     {
       key: {
-        html: 'Statement text',
+        html: 'Statement',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -80,7 +80,7 @@
   rows: [
     {
       key: {
-        html: 'Statement text',
+        html: 'Statement',
         classes: 'govuk-!-width-one-third'
       },
       value: {
