--- a/app/views/appeal/appeals/v2/appeal-details.html
+++ b/app/views/appeal/appeals/v2/appeal-details.html
@@ -261,7 +261,7 @@
         {% if data['other-proofs'] == 'complete' %}
           <p class="govuk-body">
             <a href="lpa-proofs">
-              View the local planning authorty proof of evidence and witnesses
+              View the local planning authority proof of evidence and witnesses
             </a>
           </p>
 
@@ -295,7 +295,7 @@
 
             <p class="govuk-body">
               <a href="r6-timings">
-                View witness timings for other parties
+                View witness timings from other parties
               </a>
             </p>
           {% endif %}
