--- a/app/views/appeal/appeals/v2/appellant-timings.html
+++ b/app/views/appeal/appeals/v2/appellant-timings.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Appellant witness timings" %}
+{% set title = "Your witness timings" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
