--- a/app/views/appeal/appeals/v2/lpa-questionnaire-full.html
+++ b/app/views/appeal/appeals/v2/lpa-questionnaire-full.html
@@ -18,7 +18,7 @@
       Appeal {{ data['appealCode'] or '1345264' }}
     </span>
     <h1 class="govuk-heading-xl">
-      LPA questionnaire
+      Local planning authority questionnaire
     </h1>
 
   </div>
