--- a/app/views/appeal/appeals/v2/r6-proofs.html
+++ b/app/views/appeal/appeals/v2/r6-proofs.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Other party proof of evidence and witnesses" %}
+{% set title = "Proof of evidence and witnesses from other parties" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
