--- a/app/views/appeal/rule-6/v1/your-appeals.html
+++ b/app/views/appeal/rule-6/v1/your-appeals.html
@@ -21,9 +21,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">
+      <!-- <h1 class="govuk-heading-xl">
         {{ title }}
-      </h1>
+      </h1> -->
 
       <!-- <p class="govuk-body govuk-!-margin-bottom-6">
         <a href="/manage/manage-users/v3/" class="govuk-link--no-visited-state">
@@ -33,46 +33,8 @@
 
     </div>
 
-    {% set currentAppeals %}
-      {% include "/appeal/rule-6/v1/current-appeals.html" %}
-    {% endset -%}
-
-    {% set submittedAppealsList %}
-      {% include "/_includes/rule-6/submitted-appeals.html?submitted-appeals=no" %}
-    {% endset -%}
-
     <div class="govuk-grid-column-full">
-
-      {{ govukTabs({
-        items: [
-          {
-            label: "Your appeals",
-            id: "current-appeals",
-            panel: {
-              html: currentAppeals
-            }
-          },
-          {
-            label: "Waiting for review",
-            id: "submitted-appeals",
-            panel: {
-              html: submittedAppealsList
-            }
-          }
-
-        ]
-      }) }}
-
-      {% if data['decided-appeals'] != 'no' %}
-        <!-- <p class="govuk-body">
-          <a href="decided-appeals" class="govuk-link">12 decided appeals</a>
-        </p> -->
-      {% else %}
-        <!-- <p class="govuk-body">
-          No decided appeals
-        </p> -->
-      {% endif %}
-
+      {% include "/appeal/rule-6/v1/current-appeals.html" %}
     </div>
   </div>
 {% endblock %}
