Rule 6 revoked options

--- a/app/views/_includes/rule-6/meta-full-appeal.html
+++ b/app/views/_includes/rule-6/meta-full-appeal.html
@@ -20,7 +20,7 @@
     </dt>
     <dd class="govuk-summary-list__value">
       <p class="govuk-body">
-        S78 / Full appeal
+        Full appeal
       </p>
     </dd>
   </div>
@@ -39,7 +39,7 @@
       Appeal site
     </dt>
     <dd class="govuk-summary-list__value">
-      Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT
+      Minchinhampton Common, Stroud GL5 5BZ
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -47,7 +47,7 @@
       Applicant
     </dt>
     <dd class="govuk-summary-list__value">
-      Mariella Bidbod
+      Ang Feung
     </dd>
   </div>
   <div class="govuk-summary-list__row">
