--- a/app/views/index.html
+++ b/app/views/index.html
@@ -177,6 +177,31 @@
       })}}
 
       <h4 class="govuk-heading-s govuk-!-margin-bottom-2" id="rule-6">
+        Rule 6 access
+      </h4>
+
+      <p class="govuk-body">
+        <ul class="govuk-list govuk-list--bullet">
+          <li>
+            <a href="/appeal/rule-6/v1/appeal-email?hub=">
+              Rule 6 status granted (direct)
+            </a>
+          </li>
+          <li>
+            <a href="/appeal/rule-6/v1/appeal-email?hub=true">
+              Rule 6 status granted (hub)
+            </a>
+          </li>
+          <li>
+            <a href="/appeal/rule-6/v1/appeal-revoked-email?">
+              Rule 6 status revoked
+            </a>
+          </li>
+        </ul>
+      </p>
+
+
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2" id="rule-6">
         Rule 6 appeal details
       </h4>
 
