Flipping the tabs back into the Rule 6 hub

--- a/app/views/appeal/rule-6/v1/current-appeals.html
+++ b/app/views/appeal/rule-6/v1/current-appeals.html
@@ -20,12 +20,10 @@
 
 {% else %}
 
-<div class="govuk-grid-column-full">
-
   {{ govukTable({
     classes: 'govuk-!-margin-top-3',
-    caption: 'Your appeals',
-    captionClasses: 'govuk-table__caption--xl',
+    caption: 'To do',
+    captionClasses: 'govuk-table__caption--l',
     firstCellIsHeader: true,
     head: [
       {
@@ -67,7 +65,5 @@
 
     ]
   }) }}
-
-</div>
 
 {% endif %}
