Quick HAS fix for the hub

--- a/app/views/appeal/more-than-one-appeal/v5/current-appeals.html
+++ b/app/views/appeal/more-than-one-appeal/v5/current-appeals.html
@@ -48,7 +48,7 @@
           html: '6' | daysInFuture
         },
         {
-          html: '<a href="/appeal/final-comments/v4/final-comment-check">Final comment</a>',
+          html: '',
           format: 'numeric'
         }
       ],
