HAS in hub doesn't show Final comments on appeal page

--- a/app/views/appeal/more-than-one-appeal/v5/current-appeals.html
+++ b/app/views/appeal/more-than-one-appeal/v5/current-appeals.html
@@ -36,7 +36,7 @@
     rows: [
       [
         {
-          html: '<a href="/appeal/appeals/v2/appeal-details?appealCode=1345260&type=has&action=&procedure=written&questionnaire=&lpa-statement=complete&final-comments=due&appellant-final-comments=&appeal-decided=&proofs=&lpa-proofs=">1341263</a>'
+          html: '<a href="/appeal/appeals/v2/appeal-details?appealCode=1345260&type=has&action=&procedure=written&questionnaire=&lpa-statement=complete&final-comments=&appellant-final-comments=&appeal-decided=&proofs=&lpa-proofs=">1341263</a>'
         },
         {
           html: '12a Crossley Hall, Thornton Road, Bradford BD8 OJN'
