--- a/app/views/appeal/more-than-one-appeal/v5/current-appeals.html
+++ b/app/views/appeal/more-than-one-appeal/v5/current-appeals.html
@@ -54,7 +54,7 @@
       ],
       [
         {
-          html: '<a href="/appeal/appeals/v2/appeal-details?appealCode=1345260&type=s78&action=">1333006</a>'
+          html: '<a href="/appeal/appeals/v2/appeal-details?appealCode=1345260&type=s78&action=&appeal-type=written&questionnaire=complete&lpa-statement=complete&other-statements=&final-comments=due&other-final-comments=&proofs=&other-proofs=&timings=&other-timings=&appeal-decided=">1333006</a>'
         },
         {
           html: '93 Greenhill Lane, Leeds Road, Bradford BD3 8DZ'
@@ -66,7 +66,7 @@
           html: '6' | daysInFuture
         },
         {
-          html: '<a href="/appeal/final-comments/v4/final-comment-check">Final comment</a>',
+          html: '<a href="/appeal/final-comments/v4/final-comment-check">Final comment</a><br><a href="/appeal/final-comments/v4/final-comment-check">Planning obligation</a>',
           format: 'numeric'
         }
       ],
