Content change for planning obligation check

--- a/app/views/appeal/planning-obligation/v1/final-planning-obligation-check.html
+++ b/app/views/appeal/planning-obligation/v1/final-planning-obligation-check.html
@@ -10,11 +10,14 @@
     name: 'adding-planning-obligation',
     fieldset: {
       legend: {
-        html: 'Do you want to submit a final version of your planning obligation?',
+        html: 'Do you have a planning obligation to support your appeal?',
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
     },
+    hint: {
+			html: '<p class="govuk-body">This includes a final version of a section 106 agreement or a unilateral undertaking.</p>'
+		},
     items: [
       {
         html: 'Yes',
