--- a/app/views/appeal/planning-obligation/v1/confirmation.html
+++ b/app/views/appeal/planning-obligation/v1/confirmation.html
@@ -5,6 +5,12 @@
     tag: { text: 'Beta' },
     html: 'This is a new service - your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
   }) }}
+  {% block backLink %}
+    {{ govukBackLink({
+      html: 'Back to your appeals',
+      href: '/appeal/more-than-one-appeal/v5/your-appeals'
+    }) }}
+  {% endblock %}
 {% endblock %}
 
 {% set prototypeLinks = [{
@@ -12,6 +18,8 @@
     text: 'Confirmation email'
   }]
 %}
+
+
 
 {% block content %}
   <div class="govuk-grid-row">
