--- a/app/views/appeal/full/v3/confirmation.html
+++ b/app/views/appeal/full/v3/confirmation.html
@@ -3,15 +3,41 @@
 {% set title = 'Appeal submitted' %}
 {% set back = false %}
 
+{% set prototypeLinks = [
+  {
+    href: 'confirmation?integration=yes',
+    text: 'Back office integrated version'
+  } if data['integration'] != 'yes' else
+
+  {
+    href: 'confirmation?integration=',
+    text: 'Horizon version'
+  }
+  ]
+%}
+
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {{ govukPanel({
-        titleHtml: title
-      }) }}
+      {% if data['integration'] != 'yes' %}
 
-      <p class="govuk-body">We’ve sent you a confirmation email with a link to download a copy of your appeal.</p>
+        {{ govukPanel({
+          titleHtml: title
+        }) }}
+
+      {% else %}
+
+        {{ govukPanel({
+          titleHtml: title,
+          html: "Your appeal reference <br><strong>0123456</strong>"
+        }) }}
+
+      {% endif %}
+
+      <p class="govuk-body">
+        We’ve sent you a confirmation email with a link to download a copy of your appeal.
+      </p>
 
       {{ govukInsetText({
         html: '<p class="govuk-body">You need to send a copy of your appeal to the local planning authority.</p>'
