--- a/app/views/appeal/planning-obligation/v1/check-your-answers.html
+++ b/app/views/appeal/planning-obligation/v1/check-your-answers.html
@@ -19,7 +19,7 @@
         actions: {
           items: [
             {
-              href: 'final-planning-obligation-check',
+              href: 'final-comment-check',
               text: 'Change'
             }
           ]
@@ -35,7 +35,7 @@
         actions: {
           items: [
             {
-              href: 'final-planning-obligation-check',
+              href: 'final-comment-check',
               text: 'Change'
             }
           ]
@@ -56,7 +56,7 @@
             }
           ]
         }
-      } if data['adding-planning-obligation'] != 'No'
+      } if data['adding-planning-obligation'] == 'Yes'
     ]
   }) }}
 {% endblock %}
