Content update for the 'Before you start' / service start page

--- a/app/views/appeal/before-you-start/v15/index.html
+++ b/app/views/appeal/before-you-start/v15/index.html
@@ -6,7 +6,11 @@
   <h1 class="govuk-heading-l">
     {{title}}
   </h1>
-  <p class="govuk-body">This is a new service. Before you start, we&rsquo;ll check if you can use this service by asking some questions about your appeal.</p>
+  <p class="govuk-body">
+    This is a new service. It’s only for appeals about certain application types. We’ll check if you can use this service by asking some questions about your appeal.
+  </p>
 
-  <p class="govuk-body">If you cannot use this service, you can still appeal using the existing service.</p>
+  <p class="govuk-body">
+    If you cannot use this service, you can still appeal using the existing service.
+  </p>
 {% endblock %}
