Added appellant's optional company name to the HAS journey

--- a/app/views/appeal/has/v2/prepare-appeal/appellant-name.html
+++ b/app/views/appeal/has/v2/prepare-appeal/appellant-name.html
@@ -36,5 +36,14 @@
       spellcheck: false
     }) }}
 
+    {{ govukInput({
+      id: 'appellant-company',
+      name: 'appellant-company',
+      value: data['appellant-company'],
+      label: {
+        html: 'Company name (optional)'
+      }
+    }) }}
+
   {% endcall %}
 {% endblock %}
