Firewall message + new appeal task list (not linked)

--- a/app/views/service/messages/v1/firewall-issue.html
+++ b/app/views/service/messages/v1/firewall-issue.html
@@ -9,17 +9,18 @@
   </h1>
 
   <p class="govuk-body">
-    Go back and try again.
+    Try again using letters a to z and numbers 0 to 9. Do not use any special characters, such as hyphens or apostrophes.
   </p>
 {% endblock %}
 
 {% block buttons %}
 
-  <!-- {{ govukButton({
-    text: 'Start new appeal',
-    href: '/appeal/before-you-start/v15/lpa'
+  {{ govukButton({
+    text: 'Try again',
+    href: '#'
   }) }}
 
+  <!--
   <p class="govuk-body">
     <a href="#0" class="govuk-link--no-visited-state">Enter a different email address</a>
   </p> -->
