--- a/app/views/appeal/full/v5/task-list__prepare.html
+++ b/app/views/appeal/full/v5/task-list__prepare.html
@@ -5,14 +5,20 @@
   <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="company-details-1-status">
+        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/appellant-check" aria-describedby="company-details-1-status">
           Your details
         </a>
       </div>
       <div class="govuk-task-list__status" id="company-details-2-status">
-        <strong class="govuk-tag govuk-tag--blue">
-          Incomplete
+        {% if data['your-details-complete'] %}
+        <strong class="govuk-tag govuk-tag--green">
+          Completed
         </strong>
+        {% else %}
+          <strong class="govuk-tag govuk-tag--blue">
+            Incomplete
+          </strong>
+        {% endif %}
       </div>
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
