--- a/app/views/appeal/full/v5/task-list__prepare.html
+++ b/app/views/appeal/full/v5/task-list__prepare.html
@@ -23,7 +23,7 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="company-details-2-status">
+        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/address" aria-describedby="company-details-2-status">
           Site details
         </a>
         <div id="company-details-3-hint" class="govuk-task-list__hint">
@@ -31,9 +31,15 @@
         </div>
       </div>
       <div class="govuk-task-list__status" id="company-details-2-status">
-        <strong class="govuk-tag govuk-tag--blue">
-          Incomplete
+        {% if data['site-details-complete'] %}
+        <strong class="govuk-tag govuk-tag--green">
+          Completed
         </strong>
+        {% else %}
+          <strong class="govuk-tag govuk-tag--blue">
+            Incomplete
+          </strong>
+        {% endif %}
       </div>
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
