--- a/app/views/_includes/interested/full-appeal-meta.html
+++ b/app/views/_includes/interested/full-appeal-meta.html
@@ -55,7 +55,7 @@
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Applicant
+      Appellant
     </dt>
     <dd class="govuk-summary-list__value">
       Rachel Silver
