--- a/app/views/_includes/rule-6/meta-full-appeal.html
+++ b/app/views/_includes/rule-6/meta-full-appeal.html
@@ -44,7 +44,7 @@
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Applicant
+      Appellant
     </dt>
     <dd class="govuk-summary-list__value">
       Ang Feung
