--- a/app/views/appeal/full/v5/prepare-appeal/application-reference.html
+++ b/app/views/appeal/full/v5/prepare-appeal/application-reference.html
@@ -10,10 +10,10 @@
       classes: "govuk-label--l",
       isPageHeading: true
     },
-    id: "appellant-company-name",
-    name: "appellant-company-name",
+    id: "application-reference",
+    name: "application-reference",
     classes: "govuk-input--width-10",
-    value: data['appellant-company-name'],
+    value: data['application-reference'],
     autocomplete: 'organization',
     spellcheck: false
   }) }}
