Added upload description of development agreement

--- a/app/views/appeal/full/v5/before-you-continue.html
+++ b/app/views/appeal/full/v5/before-you-continue.html
@@ -37,6 +37,9 @@
       planning application form
     </li>
     <li>
+      evidence of your agreement to change the description of development, if you need one
+    </li>
+    <li>
       application decision letter from your local authority, if you have one
     </li>
     <li>
